--- a/algorithm/01-Big-O-Notation/01_빅오_표기법.md
+++ b/algorithm/01-Big-O-Notation/01_빅오_표기법.md
@@ -1,5 +1,14 @@
 # 빅오 표기법(Big O Notation)
 
+## 📌 요약
+- 알고리즘의 성능을 분석하기 위해 빅오 표기법을 사용한다.
+- 빅오 표기법을 사용하면 알고리즘의 시간 또는 공간 복잡성을 높은 수준으로 이해할 수 있다.
+- 빅오 표기법은 정확도에는 관심이 없고 일반적인 추세(선형? 이차? 상수?)에만 관심이 있다.
+- 시간 또는 공간 복잡도(Big O로 측정)는 알고리즘에 따라 달라지는 것이지, 알고리즘을 실행하는 하드웨어에 따라 달라지지 않는다.
+
+<br>
+<br>
+
 ## 📌 빅오 표기법은 왜 필요한가?
 
 어떤 문제에 두 가지 해결법이 있다고 생각해보자.
@@ -128,6 +137,79 @@ console.log(`Time Elapsed: ${(t2 - t1) / 1000} seconds.`)
 📝 시간 복잡도 시각화해보기
 
 [Big O Introduction](https://rithmschool.github.io/function-timer-demo/)
+
+<br>
+
+### 📌 빅오 표기법의 단순화
+
+- **상수항과 낮은 차수의 항은 무시**하여 알고리즘의 성능을 간결하게 표현한다.
+    - ex. 알고리즘 실행 시간 O(f(n))이 3n² + 5n + 2라면, 이 알고리즘의 빅오 표기법은 O(n²)이다. 상수항과 낮은 차수의 항이 무시되었기 때문이다.
+
+1. 컴퓨터의 산술 연산은 상수이다.
+	- 컴퓨터가 2+2를 처리하는 시간과 100만+2를 처리하는 시간은 비슷함
+2. 변수 할당도 상수이다.
+	- `x = 1000`과 `x = 20000`, `x=1000000`을 처리하는 것은 모두 비슷함
+3. 인덱스로 배열 요소에 접근하는 것, key로 객체에 접근하는 것 모두 상수이다.
+4. 반복문에서의 복잡도는 `반복문의 길이*반복문 내부의 복잡도` 이다.
+
+<br>
+<br>
+
+## 📌 공간 복잡도
+> 알고리즘에서 코드를 실행하려면 얼마나 더 많은 메모리를 할당해야 할까?
+
+1. 대부분의 원시값(booleans, numbers, undefined, null)은 불변 공간이다.
+	- 숫자가 1이든 1000이든 같은 공간을 차지하고 있음
+2. 문자열은 `O(n)` 공간이 필요하다.
+	- 50자 문자열은 1자 문자열보다 50배 더 많은 공간을 차지
+3. 참조값도 `O(n)`을 차지한다.
+	- 배열은 배열의 길이에, 객체는 키의 개수에 비례함
+
+<br>
+
+### 예시
+```js
+function sum(arr) {
+  let total = 0;
+  for (let i = 0; i < arr.length; i++) {
+	total += arr[i];
+  }
+  return total;
+} // 😑 O(n) / ✅ O(1) space
+```
+공간으로 할당되는 것은 숫자타입인 `total`과 `i`이다. `total`과 `i`는 모두 원시값이므로 위 함수의 공간 복잡도는 `O(1)`이다.
+
+```js
+function double(arr) {
+  let newArr = [];
+  for (let i = 0; i < arr.length; i++) {
+    newArr.push(2 * arr[i]);
+  }
+  return newArr;
+} // O(n) space
+```
+`newArr`은 처음에 무조건 공간을 할당하고, 그 후로는 i의 크기에 비례해서 배열의 길이가 길어진다.
+
+<br>
+
+## 📌 로그(logarithm)
+
+> **지수함수의 역함수**
+> 나눗셈과 곱셈이 짝인 것처럼, 로그함수와 지수함수는 짝이다.
+
+```
+log₂(value) = 2^exponent = value
+```
+
+주로 이진 로그(`log₂`)를 많이 사용하는데, 귀찮으니까 여기에서는 밑이 2인 경우에는 밑을 생략하고 `log`로 쓰자! *원래는 십진 로그에서 생략했던 것 같아..*
+
+![](https://github.com/xoxojw/algorithm/assets/124491335/8c8f5e2e-0e46-4bc8-b788-ae36a0589dc0)
+
+그래프에서도 볼 수 있듯, 알고리즘이 `logn` 시간 복잡도를 갖고 있다면 좋은 것이다.
+
+- 특정 검색 알고리즘에는 로그 시간 복잡도가 있음
+- 효율적인 정렬 알고리즘에는 로그가 포함
+- 재귀는 때때로 로그 공간 복잡도를 포함
 
 <br>
 <br>
