--- a/algorithm/03-approach-to-problem-solving/문제_해결_접근법.md
+++ b/algorithm/03-approach-to-problem-solving/문제_해결_접근법.md
@@ -77,7 +77,7 @@ module.exports = add;
 
 ```js
 // math.test.js
-const add = require("./mathOperations");
+const add = require("./math");
 
 test("adds 1 + 2 to equal 3", () => {
 	expect(add(1, 2)).toBe(3);
