--- a/algorithm/03-approach-to-problem-solving/문제_해결_접근법.md
+++ b/algorithm/03-approach-to-problem-solving/문제_해결_접근법.md
@@ -96,7 +96,7 @@ test("adds -1 + -1 to equal -2", () => {
 
 <br>
 
-## 3단계: 세부 분석
+## 3단계: 세분화
 
 - 문제를 해결하기 위한 단계들을 명확하게 작성해보기
   - 세세하게 모든 라인을 작성할 필요는 없고, 기본적인 구성 단계별로 작성
@@ -104,10 +104,54 @@ test("adds -1 + -1 to equal -2", () => {
 
 <br>
 
-## 4단계: 해결 또는 단순화
+## 4단계: 해결/단순화
+
+### 단순화
+
+- 해결하려고 하는 문제에서 가장 어려운 부분을 파악하기
+- 그 어려운 부분은 일시적으로 무시
+- 단순화된 솔루션 작성
+- 어려운 부분을 다시 통합하기
 
 <br>
 
 ## 5단계: 되돌아보기와 리팩토링
+
+- 결과를 확인할 수 있는가?
+- 결과를 다르게 도출할 수 있는가?
+- 한눈에 이해할 수 있는가?
+- 결과나 방법을 다른 문제에 사용할 수 있는가?
+- 솔루션의 성능을 개선할 수 있는가?
+  - 시간 복잡도, 공간 복잡도 고려하기
+- 리팩토링할 다른 방법을 생각할 수 있는가?
+- 다른 사람들은 이 문제를 어떻게 해결했는가?
+
+<br>
+
+## 정리
+
+> 위의 5단계를 코딩 테스트 면접의 관점에서 이야기했지만, 실제로 어떤 일을 해결할 때도 적용할 수 있다.
+
+### 1단계: 문제의 이해
+
+- 어떤 해결방법을 마련할지, 앱이 어떻게 동작하도록 할지, 각 상황에서 어떤 식으로 동작하도록 할지 확실히 이해하기 위함
+
+### 2단계: 구체적 예제들
+
+- 1단계와 2단계는 문제와 input/output들을 이해하고 edge cases들을 이해하는 것에 관한 단계
+- 에러 핸들링, 사용자의 입력값에 대한 유효성 검사 등
+
+### 3단계: 세분화
+
+- 완벽한 의사코드(pseudo code)를 한 줄씩 작성할 수도 있지만, 구현해야 할 코드에 대한 틀을 잡기 위한 단계를 몇가지로 세분화하는 것도 좋은 방법
+- 문제를 해결하기 위한 '방향'을 잡기 위한 방법
+
+### 4단계: 해결/단순화
+
+- 막히는 부분이 있다면 해결할 수 있는 부분부터 처리하기
+
+### 5단계: 되돌아보기와 리팩토링
+
+- 개발자로서 리팩토링하고 더 좋은 방법에 대해 계속해서 고민하는 것은 성장할 수 있는 좋은 방법
 
 <br>
