다중 포인터 패턴

--- a/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
+++ b/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
@@ -30,3 +30,12 @@
   - 해당 분석을 문자열이나 배열에서 생성된 다른 객체 형태와 빠르게 비교
 
 <br>
+
+## 📌 다중 포인터 패턴
+
+> 두 개 또는 그 이상의 포인터를 두고 값들을 비교하여 문제를 해결하는 알고리즘 패턴
+
+- 배열이나 문자열같은 선형 구조에서 각자 다른 원소를 가리키는 2개의 포인터를 조작해가면서 원하는 결과를 도출
+- 공간 복잡도를 최소화하면서 문제를 해결하는데 매우 효율적
+
+<br>
