--- a/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
+++ b/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
@@ -39,3 +39,20 @@
 - 공간 복잡도를 최소화하면서 문제를 해결하는데 매우 효율적
 
 <br>
+
+## 📌 슬라이딩 윈도우
+
+> 연속된 데이터에서 일정 크기의 윈도우를 설정하고, 이 윈도우를 하나씩 이동시키면서 데이터를 처리하는 기법
+
+- 이 패턴은 배열이나 숫자 등에서 특정 위치에서 다른 위치까지의 윈도우(창)를 만드는 것
+- 특정 조건에 따라 윈도우가 확장되거나 닫히며(새로운 윈도우가 생성됨) 변할 수 있음
+- 배열이나 문자열 등에서 데이터의 서브셋을 추적하는 데 유용
+
+### 다중 포인터와 슬라이딩 윈도우
+
+![image](https://github.com/user-attachments/assets/b329f912-5970-4d87-960a-7b7d1f6c6571)
+
+- 다중 포인터(투 포인터)는 구간의 넓이가 조건에 따라 유동적으로 변함
+- 슬라이딩 윈도우는 구간의 넓이가 일정하게 고정
+
+<br>
