분할 정복 패턴

--- a/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
+++ b/algorithm/04-problem-solving-patterns/문제_해결_패턴.md
@@ -56,3 +56,13 @@
 - 슬라이딩 윈도우는 구간의 넓이가 일정하게 고정
 
 <br>
+
+## 📌 분할과 정복
+
+> 데이터 세트를 더 작은 조각으로 나누고, 그런 다음 데이터의 하위 집합을 사용하여 프로세스를 반복하여 문제를 해결하는 방법
+
+- 정렬, 검색 및 기타 최적화 문제에 유용
+  - 대표적인 예: 병합 정렬, 퀵 정렬, 이진 탐색 트리 등
+- 시간 복잡도를 크게 감소시킬 수 있음
+
+<br>
